# CV-Teaching-Sessions

./: opencv_traincascade
GPU-Project/: blur_gpu.cu  blur_gpu.h  compile.sh
Open-Session-1/code/C++/: CMakeCache.txt  CMakeLists.txt  Lecture1  Lecture1.cbp  Lecture1.cpp  Makefile  cmake_install.cmake
Open-Session-1/code/Java/src/: Lecture1.java
SOGA-Program/: blur_gpu.h  compile.sh
SOGA-Program/cascade-classifier-test/: CMakeLists.txt  main_cpu.cpp  main_gpu.cpp
SOGA-Program/face-detection/: CMakeLists.txt  main_cpu.cpp  main_gpu.cpp
SOGA-Program/inRange_gpu/: CMakeLists.txt  compile.sh  inRange_gpu.cu  inRange_gpu.h  main.cpp
Team-Session-1/C++/: CMakeCache.txt  CMakeLists.txt  Fit-Ellipse.cpp  Gamma-Correction.cpp  Lecture2.cbp  Makefile  cmake_install.cmake
camera-test/C++/: CMakeLists.txt  camera-test.cpp
camera-test/Java/src/: CameraTest.java
camera-test/python/: camera-test.py
