cmake_minimum_required(VERSION 3.5)
project(inRange_gpu)
find_package(OpenCV REQUIRED)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
add_executable(inRange_test main.cpp)
target_link_libraries(inRange_test ${OpenCV_LIBS} /usr/local/lib/libinRange_gpu.so)