cmake_minimum_required(VERSION 3.5)
project(Lecture2)
find_package(OpenCV REQUIRED)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
add_executable(gamma-correction Gamma-Correction.cpp)
target_link_libraries(gamma-correction ${OpenCV_LIBS})
add_executable(fit_ellipse Fit-Ellipse.cpp)
target_link_libraries(fit_ellipse ${OpenCV_LIBS})