cmake_minimum_required(VERSION 3.0)
project(opencv-test)
IF (WIN32)
    set(OPENCV_DIR "C:/Program Files (x86)/opencv/build/x64/vc15")
ENDIF ()
find_package(OpenCV REQUIRED)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
add_executable(camera-test camera-test.cpp)
target_link_libraries(camera-test ${OpenCV_LIBS})
