cmake_minimum_required(VERSION 3.5)
project(Lecture1)
find_package(OpenCV REQUIRED)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
add_executable(Lecture1 Lecture1.cpp)
target_link_libraries(Lecture1 ${OpenCV_LIBS})